--- a/assets/css/mediaScreen.css
+++ b/assets/css/mediaScreen.css
@@ -1,19 +1,166 @@
-@media screen and (max-width: 425px){
-    .header{
-    }
-    
+@media screen and (min-width: 320px) and (max-width: 374px){
     .tittle{
         width: 90%
-       
     }
+
     .tittle h1{
-        font-size: 40px;
+        font-size: 29px;
     }
 
     .animal-general{
         display: grid;
         grid-template-rows: repeat(2,1fr);
         height: 840px;
+    }
+
+    .animal-information{
+        margin-bottom: 10px;
+        margin-left: 0px;
+        width: 280px;
+    }
+
+    .animal-detailed{
+        grid-row: 2/3;
+        margin-top: 10px;
+        width: 280px;
+    }
+    .family-tree{
+        max-width: 320px;
+    }
+
+    #back{
+        max-width: 320px;
+    }
+
+    .family-tree .tittle{
+        width: 60%;
+        height: 60px;
+    }
+
+    .family-tree .tittle h2{
+        font-size: 20px;
+        text-align: center;
+        
+    }
+
+    .body-arvore{
+        max-width: 320px;
+    }
+
+    .body-arvore .image-area{
+        width: 120px;
+        height: 200px;
+    }
+
+    #wrapper{
+        overflow: scroll;
+        margin-left: 10px;
+        width: 374px;
+    }
+
+    #back{
+        max-width: 374px;
+        margin-left: -130px;
+    }
+
+    #wrapper .label{
+        max-width: 120px;
+        min-width: 120px;
+        line-height: 8px;
+        font-size: 15px;
+        
+    }
+
+    #wrapper .branch{
+       margin-left: 50px;
+    }
+
+    #wrapper .entry{
+        min-height: 25px;
+    }
+
+    .a1{
+        margin-left: -30px;
+    }
+
+    .a2{
+        margin-left: 40px;
+    }
+
+    .a3{
+        margin-left: 120px;
+    }
+
+    .a4{
+        margin-left: 200px;
+    }
+
+    #wrapper .masc.a1:before{
+        height: 170px;
+        rotate: 55deg;
+        margin-top: 90px;
+        
+    }
+
+    #wrapper .masc.a2::before{
+        height: 95px;
+        rotate: 45deg;
+        margin-left: -160px;
+    }
+
+    #wrapper .masc.a3::before{
+        rotate: 65deg;
+        margin-left: -170px;
+        margin-top: 30px;
+    }
+
+    #wrapper .masc.a4::before{
+        rotate: 75deg;
+        margin-left: -160px;
+        margin-top: 0px;
+    }
+
+    #wrapper .fem.a1::before{
+        height: 170px;
+        rotate: -55deg;
+        margin-top: -90px;
+    }
+
+    #wrapper .fem.a2::before{
+        height: -95px;
+        rotate: -45deg;
+        margin-left: -160px;
+    }
+
+    #wrapper .fem.a3::before{
+        rotate: -65deg;
+        margin-left: -170px;
+        margin-top: -30px;
+    }
+
+    #wrapper .fem.a4::before{
+        rotate: -75deg;
+        margin-left: -160px;
+        margin-top: 0px;
+    }
+
+
+}
+
+@media screen and (min-width: 375px) and (max-width: 424px){
+    .tittle{
+        width: 80%
+    }
+
+    .tittle h1{
+        font-size: 30px;
+    }
+
+    .animal-general{
+        display: grid;
+        grid-template-rows: repeat(2,1fr);
+        height: 840px;
+      
     }
 
     .animal-detailed{
@@ -31,7 +178,158 @@
     }
 
     #back{
-        display: none;
+        max-width: 424px;
+    }
+
+    .family-tree .tittle{
+        width: 60%;
+        height: 70px;
+    }
+
+    .family-tree .tittle h2{
+        font-size: 26px;
+        text-align: center;
+        
+    }
+
+    .body-arvore{
+        max-width: 374px;
+    }
+
+    .body-arvore .image-area{
+        width: 120px;
+        height: 200px;
+    }
+
+    #wrapper{
+        overflow: scroll;
+        margin-left: 10px;
+        width: 374px;
+    }
+
+    #back{
+        max-width: 374px;
+        margin-left: -130px;
+    }
+
+    #wrapper .label{
+        max-width: 120px;
+        min-width: 120px;
+        line-height: 8px;
+        font-size: 15px;
+        
+    }
+
+    #wrapper .branch{
+       margin-left: 50px;
+    }
+
+    #wrapper .entry{
+        min-height: 25px;
+    }
+
+    .a1{
+        margin-left: -30px;
+    }
+
+    .a2{
+        margin-left: 40px;
+    }
+
+    .a3{
+        margin-left: 120px;
+    }
+
+    .a4{
+        margin-left: 200px;
+    }
+
+    #wrapper .masc.a1:before{
+        height: 170px;
+        rotate: 55deg;
+        margin-top: 90px;
+        
+    }
+
+    #wrapper .masc.a2::before{
+        height: 95px;
+        rotate: 45deg;
+        margin-left: -160px;
+    }
+
+    #wrapper .masc.a3::before{
+        rotate: 65deg;
+        margin-left: -170px;
+        margin-top: 30px;
+    }
+
+    #wrapper .masc.a4::before{
+        rotate: 75deg;
+        margin-left: -160px;
+        margin-top: 0px;
+    }
+
+    #wrapper .fem.a1::before{
+        height: 170px;
+        rotate: -55deg;
+        margin-top: -90px;
+    }
+
+    #wrapper .fem.a2::before{
+        height: -95px;
+        rotate: -45deg;
+        margin-left: -160px;
+    }
+
+    #wrapper .fem.a3::before{
+        rotate: -65deg;
+        margin-left: -170px;
+        margin-top: -30px;
+    }
+
+    #wrapper .fem.a4::before{
+        rotate: -75deg;
+        margin-left: -160px;
+        margin-top: 0px;
+    }
+
+
+
+
+}
+@media screen and (min-width: 425px) and (max-width: 765px){
+    
+    .tittle{
+        width: 90%
+       
+    }
+    .tittle h1{
+        font-size: 40px;
+    }
+
+    .animal-general{
+        display: grid;
+        grid-template-rows: repeat(2,1fr);
+        height: 840px;
+      
+    }
+
+    .animal-detailed{
+        grid-row: 2/3;
+        margin-top: 10px;
+    }
+
+    .animal-information{
+        margin-bottom: 10px;
+        margin-left: 0px;
+    }
+
+    .family-tree{
+        max-width: 425px;
+    }
+
+    #back{
+        max-width: 424px;
     }
 
     .family-tree .tittle{
@@ -44,35 +342,109 @@
         text-align: center;
         
     }
+
     .body-arvore{
-        margin-top: 40px;
-        margin-left: 600px;
-        
-    }
-    #wrapper{
-        overflow: scroll;
-        
-    }
-    .body-arvore .image-area{
-        width: 120px;
-        height: 190px;
-        margin-left: 100px;
-       
+        max-width: 424px;
     }
 
-    #wrapper .branch{
-        position: relative;
-        left: 30px;
-        margin-left: 166px;
+    .body-arvore .image-area{
+        width: 120px;
+        height: 200px;
+    }
+
+    #wrapper{
+        overflow: scroll;
+        margin-left: 10px;
+        width: 424px;
+    }
+
+    #back{
+        max-width: 424px;
     }
 
     #wrapper .label{
+        max-width: 120px;
+        min-width: 120px;
+        line-height: 8px;
+        font-size: 15px;
         
+    }
+
+    #wrapper .branch{
+       margin-left: 50px;
     }
 
     #wrapper .entry{
         min-height: 25px;
     }
+
+    .a1{
+        margin-left: -30px;
+    }
+
+    .a2{
+        margin-left: 40px;
+    }
+
+    .a3{
+        margin-left: 120px;
+    }
+
+    .a4{
+        margin-left: 200px;
+    }
+
+    #wrapper .masc.a1:before{
+        height: 170px;
+        rotate: 55deg;
+        margin-top: 90px;
+        
+    }
+
+    #wrapper .masc.a2::before{
+        height: 95px;
+        rotate: 45deg;
+        margin-left: -160px;
+    }
+
+    #wrapper .masc.a3::before{
+        rotate: 65deg;
+        margin-left: -170px;
+        margin-top: 30px;
+    }
+
+    #wrapper .masc.a4::before{
+        rotate: 75deg;
+        margin-left: -160px;
+        margin-top: 0px;
+    }
+
+    #wrapper .fem.a1::before{
+        height: 170px;
+        rotate: -55deg;
+        margin-top: -90px;
+    }
+
+    #wrapper .fem.a2::before{
+        height: -95px;
+        rotate: -45deg;
+        margin-left: -160px;
+    }
+
+    #wrapper .fem.a3::before{
+        rotate: -65deg;
+        margin-left: -170px;
+        margin-top: -30px;
+    }
+
+    #wrapper .fem.a4::before{
+        rotate: -75deg;
+        margin-left: -160px;
+        margin-top: 0px;
+    }
+
+    
+   
 
 
 }
@@ -119,15 +491,23 @@
 
     .body-arvore{
         margin-top: 40px;
-        
+        max-width: 767px;
     }
     #wrapper{
         overflow: scroll;
-        margin-left: 100px;
+        margin-left: 10px;
+    }
+
+    #back{
+        max-width: 767px;
+    }
+
+    #wrapper .branch{
+       margin-left: 150px;
     }
 
     #wrapper .label{
-    
+        line-height: 9px;
     }
 
     #wrapper .entry{
